--- a/CSS/D8/h2.html
+++ b/CSS/D8/h2.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="h1.css" />
+    <link rel="stylesheet" href="h2.css" />
 </head>
 <body>
     <div></div>
 
-<!-- here is the difference,  -->
-    <div id="opacity">
-        <h3>heading</h3>
-    </div>
+    <script src="app.js"></script>
     
 </body>
 </html>
