--- a/JS/D20/practice.html
+++ b/JS/D20/practice.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> JS (Part 7) </h1>
-    <script src="hw.js"></script>
+    <script src="practice.js"></script>
     
 </body>
 </html>
