commited with the practice

--- a/JS/D22_DOM/DOM/index.html
+++ b/JS/D22_DOM/DOM/index.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <h1>Spider Man</h1>
-        <img src="/Assets/Spider-Man.png" alt="Spider-Man">
+        <img src="Assets/Spider-Man.png" alt="Spider-Man">
         <h2>About</h2>
         <p><b>Spider-Man</b> is a superhero appearing in American comic books published by <a href="https://en.wikipedia.org/wiki/Marvel_Comics">Marvel Comics</a>. 
             Created by writer-editor <b>Stan Lee</b> and artist <b>Steve Ditko</b>, he first appeared in the anthology comic book <a href="https://en.wikipedia.org/wiki/Amazing_Fantasy">Amazing Fantasy</a> 
