--- a/JS/D22_DOM/DOM/index.html
+++ b/JS/D22_DOM/DOM/index.html
@@ -31,7 +31,7 @@
 
     <div class="creationDev">
         <h2>Creation And Development</h2>
-        <p>
+        <p id ='description'>
             In 1962, with the success of the Fantastic Four, Marvel Comics editor and head writer Stan Lee was
             casting for a new superhero idea. He said the idea for Spider-Man arose from a surge in teenage 
             demand for comic books and the desire to create a character with whom teens could identify.[15]:
