--- a/JS/D22_DOM/DOM/index.html
+++ b/JS/D22_DOM/DOM/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Spider-Man</h1>
-    <img src="assets/spiderman-img.png" id="mainImg" alt="Spider-Man Image">
+    <img src="Assets/Spider-Man.png" id="mainImg" alt="Spider-Man Image" class ="abc xyz">
     
     <h2>About</h2>
     <p>
