--- a/JS/D23_more/index.html
+++ b/JS/D23_more/index.html
@@ -18,6 +18,14 @@
     <button>like me 2</button>
     <button>like me 3</button>
     <button>like me 4</button>
+
+    <!-- for qn5 -->
+     <h1>h1</h1>
+     <h3>h3</h3>
+     <p>p</p>
+     <button>button</button>
+
+
     <script src="index.js"></script>
 </body>
 </html>
