--- a/mern/CSS/D5/h3.html
+++ b/mern/CSS/D5/h3.html
@@ -18,7 +18,7 @@ scale=1.0" />
     <h3>by Percy Bysshe Shelley</h3>
     <!-- Poem -->
     <p>
-        I met a traveller from an antique land,<br />
+         met a traveller from an antique land,<br />
         Who said—“Two vast and trunkless legs of stone<br />
 
         Stand in the desert. . . . Near them, on the sand,<br />
