--- a/mern/CSS/D5/h3.html
+++ b/mern/CSS/D5/h3.html
@@ -13,12 +13,12 @@ scale=1.0" />
 
 <body style="background-color: wheat;">
     <!-- Poem Name -->
-    <h1>Ozymandias</h1>
+    <h1>Ozymandia</h1>
     <!-- Poet's Name -->
     <h3>by Percy Bysshe Shelley</h3>
     <!-- Poem -->
     <p>
-         met a traveller from an antique land,<br />
+        I met a traveller from an antique land,<br />
         Who said—“Two vast and trunkless legs of stone<br />
 
         Stand in the desert. . . . Near them, on the sand,<br />
