--- a/mern/CSS/D6(selector)/index.html
+++ b/mern/CSS/D6(selector)/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-        <h1>Quora 
+        <h1>Quorah 
             <button id="login">Log in</button>
             <button id="signup">Sign up</button>
         </h1>
@@ -40,7 +40,7 @@
         <hr />
 
         <p>
-        Bob &nbsp;&nbsp;
+        Bob &nbsp;&nbsp;    
         <a class="follow" href="/bob">Follow xyz</a>
         </p>
         <h3>What is the syllabus for JEE 2024?</h3>
