--- a/mern/CSS/D7/Qs4.html
+++ b/mern/CSS/D7/Qs4.html
@@ -24,10 +24,10 @@
     snowballng effect of nested elements in em 
 
     <section>section
-        <div>div
-            <div>div
+        <div>div1
+            <div>div2
                 <div>
-                    div
+                    div3
                 </div>
             </div>
         </div>
