--- a/mern/CSS/D7/_homework.html
+++ b/mern/CSS/D7/_homework.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Qs3.css" />
+    <link rel="stylesheet" href="_homework.css" />
 </head>
-
 <body>
-    <h1>Technologies</h1>
+    
+    <div id="mybox">My box</div>
+    <hr>
+    
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <hr>
+     <h1>Technologies</h1>
     <ul>
         <li>HTML</li>
         <li>CSS</li>
@@ -23,8 +29,5 @@
         <li>C</li>
         <li>Python</li>
     </ul>
-
-
 </body>
-
 </html>
